adapted the lib to java 11&12